--- a/webroot/css/estiloscarrousel.css
+++ b/webroot/css/estiloscarrousel.css
@@ -6,9 +6,136 @@
 	text-align: center;
 }
 
+#calendar {
+			font-family:Arial;
+			font-size:12px;
+		}
+		#calendar caption {
+			text-align:left;
+			padding:5px 10px;
+			background-color:#003366;
+			color:#fff;
+			font-weight:bold;
+			font-size:medium;
+		}
+		#calendar caption div:nth-child(1) {float:left;}
+		#calendar caption div:nth-child(2) {float:right;}
+		#calendar caption div:nth-child(2) a {cursor:pointer;}
+		#calendar th {
+			background-color:#006699;
+			color:#fff;
+			width:40px;
+		}
+		#calendar td {
+			text-align:right;
+			padding:2px 5px;
+			background-color:silver;
+		}
+		#calendar .hoy {
+			background-color:red;
+		}
+                
+                
+                
+                
+.contenedor{
+	text-align: center;
+}
+.contenedor div{
+	position: absolute;
+	top: 10%;
+	left: 15%;
+	transform: translate(0);
+	width: 400px;
+	height: 400px;
+}
+.contenedor div span{
+	color: white;
+	display: block;
+	font-size: 2.5em;
+}
 
+#medio{
+	background: url("centro.svg") center no-repeat;
+	background-size: 50px 50px;
+}
+#horas{
+	background: url("horas.svg") no-repeat;
+	background-size: 15%;
+	background-position: 50% 38%;
+}
+#minutos{
+	background: url("minutos.svg") no-repeat;
+	background-size: 10%;
+	background-position: 50% 23%;
+}
 
-
+#uno{
+	transform: rotate(30deg);
+}
+#uno span{
+	transform: rotate(-30deg);
+}
+#dos{
+	transform: rotate(60deg);
+}
+#dos span{
+	transform: rotate(-60deg);
+}
+#tres{
+	transform: rotate(90deg);
+}
+#tres span{
+	transform: rotate(-90deg);
+}
+#cuatro{
+	transform: rotate(120deg);
+}
+#cuatro span{
+	transform: rotate(-120deg);
+}
+#cinco{
+	transform: rotate(150deg);
+}
+#cinco span{
+	transform: rotate(-150deg);
+}
+#seis{
+	transform: rotate(180deg);
+}
+#seis span{
+	transform: rotate(-180deg);
+}
+#siete{
+	transform: rotate(210deg);
+}
+#siete span{
+	transform: rotate(-210deg);
+}
+#ocho{
+	transform: rotate(240deg);
+}
+#ocho span{
+	transform: rotate(-240deg);
+}
+#nueve{
+	transform: rotate(270deg);
+}
+#nueve span{
+	transform: rotate(-270deg);
+}
+#diez{
+	transform: rotate(300deg);
+}
+#diez span{
+	transform: rotate(-300deg);
+}
+#once{
+	transform: rotate(330deg);
+}
+#once span{
+	transform: rotate(-330deg);
+}
 
 a{
 	color:white;
